--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -5,8 +5,8 @@
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
 		<div class="alignRight">
-		 <button style="align:right;" class="button button-small button-positive" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
-		 <button style="align:right;" class="button button-small button-positive" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
+		 <button class="button button-small button-positive right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
+		 <button class="button button-small button-positive right" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
 		 </div> 
 		 </div>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
@@ -20,7 +20,7 @@
       <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
 					<div class="alignRight">
-					 <button  style="align:right;"class="button button-small button-positive" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
+					 <button class="button button-small button-positive right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
 					 </div>
       </ion-item>	
     </ion-list>
