--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,13 +1,11 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
   <ion-list>
-	Groups
+	<img src="../img/group.jpeg" height="10%" width="10%"> Groups
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
-		<div class="alignRight">
-		 <button class="button button-small button-positive right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
-		 <button class="button button-small button-positive right" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
-		 </div> 
+		 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
+		 <button class="button button-small button-positive pull-right" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
 		 </div>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
                     {{usr.first_name}} {{usr.last_name}} 
@@ -16,12 +14,10 @@
       </ion-item>	
     </ion-list>
     <ion-list>
-	Individuals
+	<img src="../img/ind.jpeg" height="10%" width="10%">Individuals
       <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
-					<div class="alignRight">
-					 <button class="button button-small button-positive right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
-					 </div>
+					 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
       </ion-item>	
     </ion-list>
   </ion-content>
