--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,7 +1,7 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
   <ion-list>
-	<img src="../img/group.jpeg" height="10%" width="10%"> Groups
+	<img src="img/group.jpeg" height="1%" width="1%"> Groups
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
 		 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
@@ -14,7 +14,7 @@
       </ion-item>	
     </ion-list>
     <ion-list>
-	<img src="../img/ind.jpeg" height="10%" width="10%">Individuals
+	<img src="img/ind.jpeg" height="1%" width="1%">Individuals
       <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
 					 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
