--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,11 +2,11 @@
   <ion-content class="has-header">
   <ion-list>
 	<div class="item item-avatar">
-    <img src="img/group.jpg"> Groups</div>
+    <img src="img/group.jpg" height="2%" width= "2%"> Groups</div>
       <ion-item class="item-button-right" ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
-		 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
-		 <button class="button button-small button-positive pull-right" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
+		 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
+		 <button class="button button-small button-positive" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
 		 </div>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
                     {{usr.first_name}} {{usr.last_name}} 
@@ -16,10 +16,11 @@
     </ion-list>
     <ion-list>
 	<div class="item item-avatar">
-    <img src="img/ind.jpg"> Individuals</div>
+    <img src="img/ind.jpg" height="2%" width= "2%"> Individuals</div>
       <ion-item class="item-button-right" ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
-					 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
+					<h5 style="align:right">{{walker.dest_name}} {{walker.start_time}}</h5>
+					 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
       </ion-item>	
     </ion-list>
   </ion-content>
