--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,9 +2,10 @@
   <ion-content class="has-header">
   <ion-list>
 	<div class="item item-avatar">
-    <img src="img/group.jpg" height="2%" width= "2%"> Groups</div>
+    <img src="img/group.jpg"> Groups</div>
       <ion-item class="item-button-right" ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
+		<h5 style="align:right">{{value[0].dest_name}} {{value[0].start_time}}</h5>
 		 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
 		 <button class="button button-small button-positive" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
 		 </div>
@@ -16,10 +17,10 @@
     </ion-list>
     <ion-list>
 	<div class="item item-avatar">
-    <img src="img/ind.jpg" height="2%" width= "2%"> Individuals</div>
+    <img src="img/ind.jpg"> Individuals</div>
       <ion-item class="item-button-right" ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
-					<h5 style="align:right">{{walker.dest_name}} {{walker.start_time}}</h5>
+					<h5>{{walker.dest_name}} {{walker.start_time}}</h5>
 					 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
       </ion-item>	
     </ion-list>
