--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -3,10 +3,10 @@
   <ion-list>
 	<div class="item item-avatar">
     <img src="img/group.jpg"> Groups</div>
-      <ion-item class="item-button-right" ng-repeat="(key,value) in friends" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
 		<h5>{{value[0].dest_name}} {{value[0].start_time.Dt | date:'HH:mm Z'}}</h5>
-		<div style="align:right">
+		<div class="item item-button-right">
 		 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
 		 <button class="button button-small button-positive" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
 		 </div>
